# PERIAPSIS

./: .coverage  .env.example  .gitignore  CONTEXT.md  CONTRIBUTING.md  README.md  alembic.ini  feature_list.json  init.sh  progress.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_notifications_scheduler.py
apps/api/: main.py
apps/web/: package.json  tailwind.config.js
configs/: memory_write_policy.yaml
docs/: runbook.md
docs/adr/: 001-architecture-overview.md  002-memory-system.md  003-fleet-orchestration.md  004-governance-model.md
infra/docker/: Dockerfile  docker-compose.staging.yml  docker-compose.yml
scripts/: deploy.sh
specs/: agentic-loop-platform.md
tests/: conftest.py  test_memory_store.py
tests/compliance/: test_data_retention.py  test_gdpr.py
tests/evals/: test_eval_scenarios.py  test_eval_scenarios_extended.py  test_fact_coverage.py  test_policy_adherence.py  test_quality_scoring.py
tests/export/: test_run_export.py  test_run_export_extended.py
tests/failure/: test_concurrent_failures.py  test_db_failures.py  test_policy_violations.py  test_tool_failures.py
tests/features/: test_flags.py
tests/fleet/: test_compliance.py  test_coordinator.py  test_iam.py  test_ruflo_client.py  test_security_gateway.py  test_swarm.py  test_worker.py  test_workspace.py
tests/governance/: test_governance_api.py  test_governance_events.py  test_policy.py  test_rules.py
tests/graphify/: test_client.py  test_context_assembler.py  test_graph_router.py  test_impact_tracer.py  test_knowledge_graph.py
(+93 files in other folders)
